--- a/app/templates/components/header-component.hbs
+++ b/app/templates/components/header-component.hbs
@@ -69,8 +69,8 @@
                 </li>
             {{else}}
               <li>
-                <p data-toggle="modal" data-target="#login-modal" style="margin-left:20px">
-                      <a href="javascript:void(0)" class="btn navbar-btn btn-header header-button" style="width:130px;" id="login_button">Přihlásit se</a>
+                <p style="margin-left:20px">
+                    <button id="login_button" type="button" class="btn navbar-btn btn-header header-button" style="width:130px; letter-spacing: 1px;" data-toggle="modal" data-target="#login-modal">Přihlásit se</button>
                 </p>
               </li>
               <li class="hidden-sm">
