--- a/app/templates/components/orgs-const.hbs
+++ b/app/templates/components/orgs-const.hbs
@@ -1,7 +1,6 @@
 {{#each orgs as |org|}}
     <div class="col-xs-6 col-md-3" style="text-align:center;">
-          <img src="/img/org/{{org.profile}}" class="org" alt="Organizátor {{org.name}}" title="Skóre orga: {{org.score}}"
-            >
-           <div class="org-index-name ">{{org.name}}</div>
+        <img src="/img/org/{{org.profile}}" class="org" alt="Organizátor {{org.name}}">
+        <div class="org-index-name ">{{org.name}}</div>
     </div>
 {{/each}}
