Add text-align to ale-rt component.

--- a/app/templates/components/ale-rt.hbs
+++ b/app/templates/components/ale-rt.hbs
@@ -1,13 +1,11 @@
 {{#if show}}
 {{#if text}}
-<div class="alert alert-{{type}} {{class}}" role="alert" id={{id}} style="{{style}}">
+<div class="alert alert-{{type}} {{class}}" role="alert" id="{{id}}" style="{{style}}">
     {{#if closeBtn}}
         <a href="#" class="close" aria-label="close" {{action "onClose"}}>&times;</a>
     {{/if}}
-    <div style="text-align:center">
-        <p class="navbar-btn">
-            {{{text}}}
-         </p>
+    <div style="text-align:{{text_align}}">
+        {{{text}}}
     </div>
 </div>
 {{/if}}
