--- a/app/templates/components/thread-view.hbs
+++ b/app/templates/components/thread-view.hbs
@@ -20,9 +20,10 @@
                       <label for="threadName">Příspěvek:</label>
                       {{text-editor value=response_text}}
                   </div>
+                  {{ale-rt type="warning" style="margin-top:10px" text="Pokud chceš do příspěvku vložit obrázek, vlož jej odkazem. Načítání obrázků z&nbsp;externích zdrojů je na KSI webu zakázáno pomocí CSP."}}
                   <button class="btn btn-sm btn-primary {{if progress "disabled"}}"
-                    style="margin-top:20px; margin-bottom: 20px" {{action "send"}}>{{if progress "Odesílám..." "Odeslat"}}</button>
-                  {{ale-rt type="danger" closeBtn=true show=error_show text=error}}
+                    {{action "send"}}>{{if progress "Odesílám..." "Odeslat"}}</button>
+                  {{ale-rt type="danger" style="margin-top:10px" closeBtn=true show=error_show text=error}}
               </div>
           {{/if}}
         {{/unless}}
