Alerts in administration -> ale-rt component.

--- a/app/templates/admin/achievement-create.hbs
+++ b/app/templates/admin/achievement-create.hbs
@@ -33,9 +33,7 @@
         {{/if}}
       </div>
 
-      {{#if save_status}}
-        <div class="alert alert-info" style="margin-top:20px">{{save_status}}</div>
-      {{/if}}
+      {{ale-rt type="danger" style="margin-top:20px;" closeBtn=true text=error_status}}
     </div>
   </div>
 </section>
