--- a/app/templates/admin/wave-create.hbs
+++ b/app/templates/admin/wave-create.hbs
@@ -34,9 +34,7 @@
         <button class="btn btn-primary inline" id="save" {{action "wave-create"}}>Vytvořit novou vlnu</button>
       {{/if}}
 
-      {{#if error_status}}
-        <div class="alert alert-danger" style="margin-top:20px">{{error_status}}</div>
-      {{/if}}
+      {{ale-rt type="danger" style="margin-top:20px;" closeBtn=true text=error_status}}
     </div>
   </div>
 </section>
