--- a/app/templates/admin/achievement-grant.hbs
+++ b/app/templates/admin/achievement-grant.hbs
@@ -46,16 +46,9 @@
             {{/x-select}}
         </div>
 
-        {{#if grant_status}}
-           <div class="alert alert-info" style="margin-top:20px">{{{grant_status}}}</div>
-        {{/if}}
-        {{#if grant_error}}
-            <div class="alert alert-danger" style="margin-top:20px">{{{grant_error}}}</div>
-        {{/if}}
-        {{#if grant_warning}}
-            <div class="alert alert-warning" style="margin-top:20px">{{{grant_warning}}}</div>
-        {{/if}}
-
+        {{ale-rt type="info" style="margin-top:20px;" closeBtn=true text=grant_status}}
+        {{ale-rt type="danger" style="margin-top:20px;" closeBtn=true text=grant_status}}
+        {{ale-rt type="warning" style="margin-top:20px;" closeBtn=true text=grant_warning}}
 
         {{#unless saving}}
             <button class="btn btn-primary inline" id="save" {{action "achievement-grant"}}>Udělit</button>
