--- a/app/templates/admin/article-edit.hbs
+++ b/app/templates/admin/article-edit.hbs
@@ -40,20 +40,15 @@
       {{#unless model.year.sealed}}
           <div class="row" style="margin-left:0px; margin-top:20px">
             {{#if saving}}
-                <button class="btn btn-primary inline disbaled" id="save_disabled">Ukládám...</button>
+                <button class="btn btn-primary inline disabled" id="save_disabled">Ukládám...</button>
             {{else}}
                 <button class="btn btn-primary inline" id="save" {{action "article-save"}}>Uložit</button>
             {{/if}}
           </div>
       {{/unless}}
 
-      {{#if error_status}}
-        <div class="alert alert-danger" style="margin-top:20px">{{error_status}}</div>
-      {{/if}}
-      {{#if save_status}}
-        <div class="alert alert-info" style="margin-top:20px">{{save_status}}</div>
-      {{/if}}
-
+      {{ale-rt type="danger" style="margin-top:20px;" closeBtn=true text=error_status}}
+      {{ale-rt type="info" style="margin-top:20px;" closeBtn=true text=save_status}}
     </div>
   </div>
 </section>
