--- a/app/templates/admin/task-create.hbs
+++ b/app/templates/admin/task-create.hbs
@@ -42,10 +42,7 @@
         {{/unless}}
       </div>
 
-      {{#if error_status}}
-        <div class="alert alert-danger" style="margin-top:20px">{{error_status}}</div>
-      {{/if}}
-
+      {{ale-rt type="danger" style="margin-top:20px;" closeBtn=true text=error_status}}
     </div>
   </div>
 </section>
