--- a/app/templates/admin/year-edit.hbs
+++ b/app/templates/admin/year-edit.hbs
@@ -46,12 +46,8 @@
         <div class="alert alert-info" style="margin-top:20px">Ročník může upravit pouze administrátor.</div>
       {{/if}}
 
-      {{#if error_status}}
-        <div class="alert alert-danger" style="margin-top:20px">{{error_status}}</div>
-      {{/if}}
-      {{#if save_status}}
-        <div class="alert alert-info" style="margin-top:20px">{{save_status}}</div>
-      {{/if}}
+      {{ale-rt type="danger" style="margin-top:20px;" closeBtn=true text=error_status}}
+      {{ale-rt type="info" style="margin-top:20px;" closeBtn=true text=save_status}}
     </div>
   </div>
 </section>
