Fix task-solution id.

--- a/app/templates/task/solution.hbs
+++ b/app/templates/task/solution.hbs
@@ -1,7 +1,7 @@
 <div style="margin:20px">
     <h3 class="visible-print">Řešení</h3>
     {{#if model.details.solution}}
-        <div class="task-assignment">
+        <div id="task-solution">
             {{{model.details.solution}}}
         </div>
     {{else}}
