scss extend class add dot
scss files included two instances of @extend directive with element,
which wasn't referenced as class selector. Typo?

--- a/app/styles/layout/table.scss
+++ b/app/styles/layout/table.scss
@@ -3,7 +3,7 @@
 }
 
 .table-hover-forum {
-  @extend table-hover;
+  @extend .table-hover;
 }
 
 .table-hover-forum tbody tr:hover td, .table-hover tbody tr:hover th {
