keks->ibis and brkos references and icons
keks->ibis and brkos references and icons
Closes #287

--- a/app/styles/layout/footer.scss
+++ b/app/styles/layout/footer.scss
@@ -103,12 +103,12 @@ div#preload { display: none; }
    background-size: 50px 50px;
  }
 
- #keks-logo {
-   background: url("/img/logos/keks.svg") top left no-repeat;
+ #ibis-logo {
+   background: url("/img/logos/ibis.svg") top left no-repeat;
    background-size: 50px 50px;
  }
- #keks-logo:hover {
-   background: url("/img/logos/keks-hover.svg") top left no-repeat;
+ #ibis-logo:hover {
+   background: url("/img/logos/ibis-hover.svg") top left no-repeat;
    background-size: 50px 50px;
  }
 
