--- a/app/templates/footer.hbs
+++ b/app/templates/footer.hbs
@@ -15,7 +15,7 @@
                         <a href="http://interlos.fi.muni.cz" title="INTERnetová LOgická Soutěž" class="footer-logo inline-footer" id="los-logo"></a>
                         <a href="http://zverinec.fi.muni.cz" title="Spolek přátel severské zvěře" class="footer-logo inline-footer" id="zverinec-logo"></a>
                         <a href="http://brkos.math.muni.cz" title="BRněnský KOrespondenční Seminář" class="footer-logo inline-footer" id="brkos-logo"></a>
-                        <a href="http://keks.math.muni.cz/" title="Korespondenční EKologický Seminář" class="footer-logo inline-footer" id="keks-logo"></a>
+                        <a href="http://ibis.sci.muni.cz/" title="Interaktivní BIologický Seminář" class="footer-logo inline-footer" id="ibis-logo"></a>
                         <a href="http://ksp.mff.cuni.cz" title="Korespondenční seminář z programování" class="footer-logo inline-footer" id="ksp-logo"></a>
                         <a href="https://www.youtube.com/channel/UCH0K2_tAhkJNlvfRo5NsEIg" title="YouTube" class="footer-logo inline-footer" id="youtube-logo"></a>
                         <a href="https://github.com/fi-ksi" title="KSI @ GitHub" class="footer-logo inline-footer" id="github-logo"></a>
@@ -28,7 +28,7 @@
                         <img src="/img/logos/mu-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/kscuk-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/zverinec-hover.svg" width="1" height="1"/>
-                        <img src="/img/logos/keks-hover.svg" width="1" height="1"/>
+                        <img src="/img/logos/ibis-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/brkos-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/intersob-hover.svg" width="1" height="1"/>
                         <img src="/img/logos/los-hover.svg" width="1" height="1"/>
