--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -50,7 +50,7 @@
             </a>
             <p class="about-paragraph autojustify" style="font-size:18px;">
               Při řešení našeho semináře nemusíš jen sedět doma za počítačem. Během roku pro všechny řešitele pravidelně pořádáme výlety (Ksílety), na kterých se můžeš seznámit s&nbsp;ostatními řešiteli, osobně poznat organizátory a&nbsp;zahrát si kupu zajímavých her.
-V&nbsp;září se mohou úspěšní řešitelé těšit na týdenní soustředění K-SCUK, které je společné pro KSI a&nbsp;ekologický seminář KEKS. Náplní soustředění je jak odborný program, díky kterému se opět naučíš něco nového z&nbsp;informatiky, tak bohatý doprovodný program.
+V&nbsp;září se mohou úspěšní řešitelé těšit na týdenní soustředění K-SCUK, které je společné pro KSI a&nbsp; biologický seminář IBIS. Náplní soustředění je jak odborný program, díky kterému se opět naučíš něco nového z&nbsp;informatiky, tak bohatý doprovodný program.
             </p>
           </div>
           <div class="col-xs-12 col-sm-4">
