code-module new api
Ref #309

--- a/app/templates/components/code-module.hbs
+++ b/app/templates/components/code-module.hbs
@@ -24,6 +24,7 @@
     </div>
 
     {{ale-rt type="danger" show=show_error closeBtn=true text=general_error style="margin-top:20px"}}
+    {{ale-rt type=script_message_mode show=show_message closeBtn=true text=script_message_output style="margin-top:20px"}}
 
     {{#if script_text_output}}
         <div class="row" style="margin-top:20px; margin-left:0px; margin-right:20px">
