new api implementation
Ref #309

--- a/app/templates/components/file-module.hbs
+++ b/app/templates/components/file-module.hbs
@@ -33,5 +33,6 @@
 
         {{ale-rt type="info" text=progress_msg}}
         {{ale-rt type="danger" show=show_error closeBtn=true text=general_error}}
+        {{ale-rt type=script_message_mode show=show_message closeBtn=true text=script_message_output style="margin-top:20px"}}
     </div>
 {{/if}}
