--- a/app/templates/components/sortable-module.hbs
+++ b/app/templates/components/sortable-module.hbs
@@ -22,4 +22,5 @@
     </div>
 
     {{ale-rt type="danger" closeBtn=true text=general_error show=show_error style="margin-top:20px"}}
+    {{ale-rt type=script_message_mode show=show_message closeBtn=true text=script_message_output style="margin-top:20px"}}
 </div>
