--- a/app/templates/components/text-module.hbs
+++ b/app/templates/components/text-module.hbs
@@ -12,4 +12,5 @@
     </form>
 
     {{ale-rt type="danger" closeBtn=true text=general_error}}
+    {{ale-rt type=script_message_mode show=show_message closeBtn=true text=script_message_output style="margin-top:20px"}}
 </div>
