--- a/app/templates/components/quiz-module.hbs
+++ b/app/templates/components/quiz-module.hbs
@@ -27,4 +27,5 @@
     </div>
 
     {{ale-rt type="danger" closeBtn=true text=general_error style="margin-top:20px"}}
+    {{ale-rt type=script_message_mode show=show_message closeBtn=true text=script_message_output style="margin-top:20px"}}
 </div>
