--- a/app/templates/components/module-wrap.hbs
+++ b/app/templates/components/module-wrap.hbs
@@ -40,8 +40,7 @@
       {{#if session.current_user.organisator}}
         {{#if module.report_output}}
             <div class="row" style="margin-top:20px; margin-left:0px; margin-right:20px">
-              <label>Orgovský report z vyhodnocení</label>
-              <button class="btn btn-primary btn-task inline hidden-print" style="margin-left:30px" {{action "toggle_report"}}>{{report_button_text}}</button>
+              <button class="btn btn-primary btn-task inline hidden-print" {{action "toggle_report"}}>{{report_button_text}}</button>
               {{#if module.show_report}}
                   {{textarea class="form-control" style="min-width: 100%;" rows="10" readonly="true" value=module.report_output}}
               {{/if}}
