Edit org header.

--- a/app/templates/components/header-admin.hbs
+++ b/app/templates/components/header-admin.hbs
@@ -12,8 +12,8 @@
           <li class="navbar-admin-li">{{#link-to "admin/waves"}}Vlny{{/link-to}}</li>
           <li class="navbar-admin-li">{{#link-to "admin/tasks"}}Úlohy{{/link-to}}</li>
           <li class="navbar-admin-li">{{#link-to "admin/articles"}}Články{{/link-to}}</li>
+          <li class="navbar-admin-li">{{#link-to "admin/execs"}}Spuštění{{/link-to}}</li>
           <li class="navbar-admin-li">{{#link-to "admin/correcting"}}Opravování{{/link-to}}</li>
-          <li class="navbar-admin-li"><a href="https://github.com/fi-ksi/seminar/wiki">Wiki</a></li>
         </ul>
       </div>
     </div><!-- /.navbar-collapse -->
