Add link prog. module -> executions.

--- a/app/templates/components/code-module.hbs
+++ b/app/templates/components/code-module.hbs
@@ -21,6 +21,9 @@
         <button class="btn btn-primary btn-task inline" style="margin-top:20px;" {{action "save"}}>Uložit soubor na disk</button>
         <button class="btn btn-primary btn-task inline {{if (or running submitting) "disabled"}}" style="margin-top:20px;" {{action "reset"}}>Obnovit výchozí kód</button>
         {{input type="file" class="hide" id=(construct-id "load_input" module.id) accept=".py"}}
+        {{#if session.current_user.organisator}}
+            {{#link-to "admin/execs" (query-params module=module.id) class="btn btn-primary btn-task inline mtop20"}}→ Spuštění{{/link-to}}
+        {{/if}}
     </div>
 
     {{ale-rt type="danger" show=show_error closeBtn=true text=general_error style="margin-top:20px"}}
