--- a/app/styles/components/orgs-list.scss
+++ b/app/styles/components/orgs-list.scss
@@ -6,3 +6,13 @@ img.org {
     position: relative;
     max-height: 262px;
 }
+
+div.orgs-row{
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;    
+}
+
+div.orgs-row > h2 { 
+    width: 100%;
+}
