--- a/app/templates/task/discussion.hbs
+++ b/app/templates/task/discussion.hbs
@@ -1,2 +1,4 @@
 <h3 class="visible-print">Diskuze</h3>
-{{thread-view thread=model.details.thread store=store}}
+<div style="margin: 20px;">
+    {{thread-view thread=model.details.thread store=store}}
+</div>
