--- a/app/templates/admin/correcting.hbs
+++ b/app/templates/admin/correcting.hbs
@@ -7,7 +7,6 @@
 
     <div class="panel-heading">Zvolit omezení</div>
     <div class="panel-body">
-      <div class="form-group">
         <div class="col-md-3">
           <label>Vlna</label>
           {{#x-select value=wave class="form-control"}}
@@ -58,16 +57,17 @@
             {{/each}}
           </select>
         </div>
-      </div>
+
+      <div class="col-xs-12" style="height:20px;"></div>
 
       {{#if wrong_filter}}
-         <div class="col-xs-12" style="margin-top: 20px">
+         <div class="col-xs-12">
              {{ale-rt type="warning" text="Je třeba vybrat řešitele, úlohu nebo oboje."}}
          </div>
       {{/if}}
 
       <div class="col-md-3">
-          <button class="btn btn-primary {{if (or filter_in_progress wrong_filter) "disabled"}}" style="width: 250px; margin-left:0px; margin-top: 20px" {{action "filter"}} enabled="{{if (or filter_in_progress wrong_filter) "false" "true"}}">
+          <button class="btn btn-primary {{if (or filter_in_progress wrong_filter) "disabled"}}" style="width: 250px;" {{action "filter"}} enabled="{{if (or filter_in_progress wrong_filter) "false" "true"}}">
         {{if filter_in_progress "Načítám, vyčkej pár vteřin..." "Zobrazit"}}
           </button>
       </div>
@@ -75,7 +75,7 @@
       {{#unless filter_in_progress}}
         {{#if corrections}}
             <div class="col-md-9">
-                <div class="alert alert-info" style="margin-top: 20px; height: 32px !important; padding: 7px !important;">
+                <div class="alert alert-info" style="height: 32px !important; padding: 7px !important; margin-bottom: 0px;">
                     <strong>{{corrections.length}}</strong> opravení |
                     <a href="javascript:void()" {{action "all"}}>Stáhnout všechna v jednom ZIP souboru</a>
                 </div>
