--- a/app/templates/task/statistics.hbs
+++ b/app/templates/task/statistics.hbs
@@ -1,5 +1,5 @@
 <h3 class="visible-print">Statistika</h3>
-<div style="margin: 20px;">
+<div>
 <table class="table table-striped">
   <thead>
     <tr style="height:45px">
