--- a/app/templates/task/discussion.hbs
+++ b/app/templates/task/discussion.hbs
@@ -1,4 +1,4 @@
 <h3 class="visible-print">Diskuze</h3>
 <div style="margin: 20px;">
-    {{thread-view thread=model.details.thread store=store}}
+    {{thread-view thread=model.details.thread store=store taskId=model.id}}
 </div>
