--- a/app/templates/admin/correcting.hbs
+++ b/app/templates/admin/correcting.hbs
@@ -9,7 +9,7 @@
     <div class="panel-body">
         <div class="col-md-3">
           <label>Vlna</label>
-          {{#x-select value=wave class="form-control"}}
+          {{#x-select value=wave class="form-control" id="wave_sel"}}
             {{#x-option value=""}}Vyber vlnu{{/x-option}}
             {{#each waves as |w|}}
               {{#x-option value=w.id}}{{w.caption}}{{/x-option}}
@@ -67,7 +67,7 @@
       {{/if}}
 
       <div class="col-md-3">
-          <button class="btn btn-primary {{if (or filter_in_progress wrong_filter) "disabled"}}" style="width: 250px;" {{action "filter"}} enabled="{{if (or filter_in_progress wrong_filter) "false" "true"}}">
+          <button class="btn btn-primary {{if (or filter_in_progress wrong_filter) "disabled"}}" style="width: 250px;" {{action "filter"}} enabled="{{if (or filter_in_progress wrong_filter) "false" "true"}}" id="load_corrections_button">
         {{if filter_in_progress "Načítám, vyčkej pár vteřin..." "Zobrazit"}}
           </button>
       </div>
