--- a/app/templates/components/thread-view.hbs
+++ b/app/templates/components/thread-view.hbs
@@ -4,7 +4,7 @@
 
 <ul class="media-list" style="margin:20px">
   {{#each thread.details.root_posts as |post|}}
-    {{thread-post model=post store=store}}
+    {{thread-post model=post store=store taskId=taskId}}
   {{else}}
     <p>Toto vlákno je zatím prázdné. Můžeš přidat první příspěvek!</p>
   {{/each}}
