--- a/app/templates/task/discussion.hbs
+++ b/app/templates/task/discussion.hbs
@@ -1,2 +1,2 @@
 <h3 class="visible-print">Diskuze</h3>
-{{thread-view thread=model.details.thread store=store}}
+{{thread-view thread=model.details.thread store=store taskId=model.id}}
