Bigger achievements on profile
Closes #143
Graphics by @GiraffeReversed
Also solves annoying underlining of no-content link.

--- a/app/styles/base/links.scss
+++ b/app/styles/base/links.scss
@@ -29,3 +29,7 @@ a.header-link:active {
 .noContent[href]:after {
     content: none !important;
 }
+
+.noContent:hover {
+    text-decoration: none;
+}
