directly set params #297; print HTML #143
Ref #143
Closes #297

--- a/app/templates/components/achievement-big.hbs
+++ b/app/templates/components/achievement-big.hbs
@@ -7,7 +7,7 @@
             <h4 class="achievement-text-name">{{{model.title}}}</h4>
         </div>
         <div class="achievement-text-description">
-            {{model.description}}
+            {{{model.description}}}
         </div>
     </div>
 </div>
