--- a/app/templates/task/statistics.hbs
+++ b/app/templates/task/statistics.hbs
@@ -16,7 +16,7 @@
       <td>{{#link-to "user-profile" score.user}}{{score.user.full_name}}{{/link-to}}</td>
       <td>
         {{#each score.user.achievements as |achievement|}}
-          {{#link-to 'achievements'}}{{achievement-small model=achievement}}{{/link-to}}
+          {{#link-to 'achievements' class='noContent'}}{{achievement-small model=achievement}}{{/link-to}}
         {{/each}}
       </td>
       <td style="text-align: center;">{{score.score}}</td> <!-- body -->
